--- a/debian/control
+++ b/debian/control
@@ -11,9 +11,9 @@ Build-Depends: debhelper-compat (= 12),
 			   libkf5windowsystem-dev,
 			   libglib2.0-dev
 Standards-Version: 4.4.1
-Homepage: <insert the upstream URL, if relevant>
-#Vcs-Browser: https://salsa.debian.org/debian/mdm-app-event-service
-#Vcs-Git: https://salsa.debian.org/debian/mdm-app-event-service.git
+Homepage: https://github.com/ukui/mdm-app-event
+Vcs-Browser: https://github.com/ukui/mdm-app-event
+Vcs-Git: https://github.com/ukui/mdm-app-event.git
 
 Package: mdm-app-event-service
 Architecture: any
